2007-02-14  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in: Add tramp-gw.el

	* tramp-gw.el: New package.

	* tramp.el (top): Require tramp-gw.
	(tramp-methods): Add `tramp-gw-args' and `tramp-default-port' for
	ssh and telnet methods.
	(tramp-message): Catch errors.
	(tramp-action-yesno, tramp-action-yn): Trace messages.
	(tramp-maybe-open-connection): Handle gateways.
	(tramp-read-passwd): New parameter PROC. Used in order to improve
	password prompt. Adapt callees.

2007-02-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-flush-file-function): Renamed from
	`tramp-cache-before-revert-function'.  Added to
	`kill-buffer-hook'.

2007-01-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-handle-insert-directory)
	* tramp.el (tramp-handle-insert-directory): Fix wildcard case.

2007-01-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-util.el (top): Add defadvices for `browse-url-*'.

2007-01-21  Glenn Morris  <rgm@gnu.org>

	* tramp.el (tramp-perl-encode, tramp-perl-decode):
	Update copyrights.

2007-01-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-parsed-tramp-file-name): Protect debug spec
	during compilation.
	(tramp-handle-expand-file-name, tramp-find-method)
	(tramp-find-user, tramp-find-host): Don't check for
	`tramp-completion-mode'.
	(tramp-find-foreign-file-name-handler): Check also for
	`tramp-completion-mode' and `ramp-completion-file-name-regexp'.
	(tramp-completion-mode): Variable removed.  Also all occurencies.
	(tramp-completion-handle-file-name-all-completions): Don't call
	`tramp-run-real-handler'.
	(tramp-make-tramp-file-name): It must return always a well-formed
	Tramp file name.
	(tramp-completion-make-tramp-file-name): New defun.
	(tramp-get-completion-methods, tramp-get-completion-user-host):
	Apply it.

2007-01-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-start-process): BUFFER can be nil.
