@@ -1,3 +1,11 @@
+2007-02-15  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-gw.el (tramp-gw-current-gw-vector)
+	(tramp-gw-current-http-buffer): New defvars.
+	(tramp-advice-url-http-parse-response)
+	(tramp-advice-url-http-create-request, tramp-gw-aux-proc-sentinel)
+	(tramp-gw-open-connection): Make them fit for proxy authentication.
+
 2007-02-14  Michael Albinus  <michael.albinus@gmx.de>
 
 	* Makefile.in: Add tramp-gw.el
